--- a/css/main.css
+++ b/css/main.css
@@ -224,7 +224,7 @@
 
 .secondfot{
     list-style-type: none;
-    margin-left: 1000px;
+    margin-left: 84%;
 
 }
 
@@ -245,8 +245,8 @@
 
 .lastfot{
     list-style-type: none;
-    margin-top: 30px;
-    margin-left: 650px
+    margin-top: 1.5%;
+    margin-left: 60%;
 }
 
 .lastfot>div{
@@ -257,5 +257,6 @@
 }
 
 .lastfot3{
+
     margin-left: 50px;
 }
